<resources>
    <string name="app_name">AfterStart</string>
    <string name="text_view">Text View</string>
    <string name="submit">submit</string>
    <string name="enter_your_name">enter your name</string>
    <string name="registration">Registration</string>
    <string name="enter_your_city">enter your city</string>
    <string name="enter_your_mobile_number">enter your mobile number</string>
    <string name="enter_your_email">enter your email</string>
    <string name="custom_toast">Custom Toast</string>
    <string name="button">Button</string>
    <string name="gridview">gridview</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="default_web_client_id" translatable="false">131408990813-01jj68v92re5af3l4ha2a98h0000uok7.apps.googleusercontent.com</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_responsive">Responsive</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
</resources>